# maya-mcp-server

./: .gitignore  .npmignore  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  README_CN_TW.md  README_DE.md  README_ES.md  README_FR.md  README_JP.md  README_KO.md  README_RU.md  TROUBLESHOOTING_NPX.md  cleancache.bat  main.py  package.json  pyproject.toml  reload_maya_plugin.py  requirements.txt
examples/: README.md  mcp_config_npx.json  mcp_config_npx_local.json  mcp_config_npx_no_cache.json  mcp_config_python.json  mcp_config_uvx.json
plug-ins/: maya_mcp.py
src/maya_mcp/: __init__.py  __main__.py  server.py
