[project]
name = "maya-mcp"
version = "1.0.0"
description = "Maya integration through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Maya MCP Team", email = "maya-mcp@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0",
]

[project.scripts]
maya-mcp = "maya_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project.urls]
"Homepage" = "https://github.com/Jeffreytsai1004/maya-mcp-server"
"Bug Tracker" = "https://github.com/Jeffreytsai1004/maya-mcp-server/issues"